# youtrack-python-cli

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pre-push  pyproject.toml  tox.ini  youtrack-id-check-pre-commit
.github/workflows/: main.yml
tests/: test_cli.py
tests/__snapshots__/: test_cli.ambr
youtrack_python_cli/: __init__.py  _version.py  cli.py
