[tool.poetry]
name = "youtrack-python-cli"
version = "0.1.0"
description = "Basic Youtrack CLI in python"
authors = ["Noah Pendleton"]
readme = "README.md"
packages = [{include = "youtrack_python_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
youtrack-python-openapi = "^2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
