[tool.poetry]
name = "youtrack-python-cli"
version = "0.1.0"
description = "Basic Youtrack CLI in python"
authors = []
readme = "README.md"
packages = [{ include = "youtrack_python_cli" }]


[tool.poetry.scripts]
youtrack-cli = 'youtrack_python_cli.cli:cli'


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
youtrack-python-openapi = "^2023.1"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
