[tool.poetry]
name = "youtrack-python-cli"
version = "0.1.1"
description = "Basic Youtrack CLI in python"
authors = []
readme = "README.md"
packages = [{ include = "youtrack_python_cli" }]

[tool.poetry.scripts]
youtrack-cli = 'youtrack_python_cli.cli:cli'

[tool.poetry.dependencies]
python = "^3.7.2"
click = "^8.1.3"
youtrack-python-openapi = "^2023.1"
rich = "^13.3.2"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5"
mypy = "^1.1.1"
pytest = "^7.2.2"
ruff = "^0.0.255"
syrupy = { version = "^4", python = ">=3.8.1,<4.0" }
respx = "^0.20.1"
pytest-cov = "^4.0.0"
tox = "^4.4.7"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
experimental-string-processing = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/profiles/
profile = 'black'
